# book-editor

./: .env.example  .gitignore  .railway-url  .slice.toml  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  agent_system_prompts.json  author-tool-helper.sh  clean-test-data.sh  docker-compose.yml  pyproject.toml  railway.json
src/book_editor/: __init__.py  browser.py  config.py  db.py  epub_parser.py  llm.py  main.py  models.py
src/book_editor/agents/: __init__.py  audience.py  base.py  chapter_worker.py  editor.py  judge.py  stylist.py
src/book_editor/pipelines/: __init__.py  full_book.py  micro_book.py  orchestrator.py
src/book_editor/templates/: access.html  base.html  book.html  home.html  log.html  reader.html
tests/: conftest.py  test_agents.py  test_epub_parser.py  test_pipeline.py
